--- a/index.html
+++ b/index.html
@@ -121,10 +121,11 @@
                                 </ol>
                             </div>
                             <div class="hw-started-art-mod js-reveal-right">
-                                <picture>
-                                    <source type="image/webp" srcset="/images/auto/hw-laptop.webp , /images/auto/hw-laptop@2x.webp 2x" />
-                                    <img alt="Computer with PillPack signup form" srcset="/images/auto/hw-laptop.webp, /images/auto/hw-laptop@2x.webp 2x" />
-                                </picture>
+                                <img alt="" src="/images/auto/hw-laptop-512b73b52f.png"> 
+                                <!-- <picture> 
+                                    <source type="image/webp" srcset="/images/auto/hw-laptop-0203bbd67b.webp, /images/auto/hw-laptop@2x-a3369b7466.webp 2x"> 
+                                    <img alt="Computer with PillPack signup form" srcset="/images/auto/hw-laptop-512b73b52f.png, /images/auto/hw-laptop@2x-49044efb69.png 2x"> 
+                                </picture> -->
                             </div>
                         </div>
                     </div>
@@ -177,10 +178,11 @@
                                 </div>
                             </div>
                             <div class="hw-knolled-art-mod js-reveal-bottom">
-                                <picture>
+                                <img alt="" src="/images/auto/hw-knolled.webp" />
+                                <!-- <picture>
                                     <source type="image/webp" srcset="/images/auto/hw-knolled.webp, /images/auto/hw-knolled@2x.webp 2x" />
                                     <img alt="PillPack app, packet, dispenser, and other" srcset="/images/auto/hw-knolled.webp, /images/auto/hw-knolled@2x.webp 2x" />
-                                </picture>
+                                </picture> -->
                             </div>
                         </div>
                     </div>
@@ -226,10 +228,11 @@
                 <div class="section-inner pp-inner--split">
                     <div class="pp-split-mod">
                         <div class="inline-item-art js-reveal-left">
-                            <picture>
+                            <img alt="" src="/images/auto/hw-doctor-1-6c94c1ab10.webp" />
+                            <!-- <picture>
                                 <source type="image/webp" srcset="/images/auto/hw-doctor-1-6c94c1ab10.webp, /images/auto/hw-doctor-1@2x-733df0fc67.webp 2x" />
                                 <img alt="List of medications on a PillPack dispenser." srcset="/images/auto/hw-doctor-1-b8e11d3db3.png, /images/auto/hw-doctor-1@2x-f505be07dc.png 2x" />
-                            </picture>
+                            </picture> -->
                         </div>
                         <div class="pp-txt-mod">
                             <h3 class="split-h">Your monthly medication list</h3>
@@ -238,10 +241,11 @@
                     </div>
                     <div class="pp-split-mod">
                         <div class="inline-item-art js-reveal-left-delay">
-                            <picture>
+                            <img alt="" src="/images/auto/hw-doctor-2-b4d7060a9f.webp" />
+                            <!-- <picture>
                                 <source type="image/webp" srcset="/images/auto/hw-doctor-2-b4d7060a9f.webp, /images/auto/hw-doctor-2@2x-3769ef7169.webp 2x" />
                                 <img alt="PillPack iPhone app and medication packet." srcset="/images/auto/hw-doctor-2-2d0b16192c.png, /images/auto/hw-doctor-2@2x-a4c460271c.png 2x" />
-                            </picture>
+                            </picture> -->
                         </div>
                         <h3 class="split-h">Safety is our priority</h3>
                         <p class="section-p">For accuracy, a pharmacist checks every packet at multiple points in the process. We also review your full med list for any interaction issues.</p>
