--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                                 </ol>
                             </div>
                             <div class="hw-started-art-mod js-reveal-right">
-                                <img alt="" src="/images/auto/hw-laptop-512b73b52f.png"> 
+                                <img alt="" src="./images/auto/hw-laptop-512b73b52f.png"> 
                                 <!-- <picture> 
                                     <source type="image/webp" srcset="/images/auto/hw-laptop-0203bbd67b.webp, /images/auto/hw-laptop@2x-a3369b7466.webp 2x"> 
                                     <img alt="Computer with PillPack signup form" srcset="/images/auto/hw-laptop-512b73b52f.png, /images/auto/hw-laptop@2x-49044efb69.png 2x"> 
@@ -178,7 +178,7 @@
                                 </div>
                             </div>
                             <div class="hw-knolled-art-mod js-reveal-bottom">
-                                <img alt="" src="/images/auto/hw-knolled.webp" />
+                                <img alt="" src="./images/auto/hw-knolled.webp" />
                                 <!-- <picture>
                                     <source type="image/webp" srcset="/images/auto/hw-knolled.webp, /images/auto/hw-knolled@2x.webp 2x" />
                                     <img alt="PillPack app, packet, dispenser, and other" srcset="/images/auto/hw-knolled.webp, /images/auto/hw-knolled@2x.webp 2x" />
@@ -228,7 +228,7 @@
                 <div class="section-inner pp-inner--split">
                     <div class="pp-split-mod">
                         <div class="inline-item-art js-reveal-left">
-                            <img alt="" src="/images/auto/hw-doctor-1-6c94c1ab10.webp" />
+                            <img alt="" src="./images/auto/hw-doctor-1-6c94c1ab10.webp" />
                             <!-- <picture>
                                 <source type="image/webp" srcset="/images/auto/hw-doctor-1-6c94c1ab10.webp, /images/auto/hw-doctor-1@2x-733df0fc67.webp 2x" />
                                 <img alt="List of medications on a PillPack dispenser." srcset="/images/auto/hw-doctor-1-b8e11d3db3.png, /images/auto/hw-doctor-1@2x-f505be07dc.png 2x" />
@@ -241,7 +241,7 @@
                     </div>
                     <div class="pp-split-mod">
                         <div class="inline-item-art js-reveal-left-delay">
-                            <img alt="" src="/images/auto/hw-doctor-2-b4d7060a9f.webp" />
+                            <img alt="" src="./images/auto/hw-doctor-2-b4d7060a9f.webp" />
                             <!-- <picture>
                                 <source type="image/webp" srcset="/images/auto/hw-doctor-2-b4d7060a9f.webp, /images/auto/hw-doctor-2@2x-3769ef7169.webp 2x" />
                                 <img alt="PillPack iPhone app and medication packet." srcset="/images/auto/hw-doctor-2-2d0b16192c.png, /images/auto/hw-doctor-2@2x-a4c460271c.png 2x" />
