--- a/index.html
+++ b/index.html
@@ -67,9 +67,9 @@
                     <p class="hero-p"><span class="break small">You'll only pay your copays. </span>We take care of the rest.</p>
                 </div>
                 <div class="hw-hero-art-mod">
-                    <video class="js-hero-video pp-hero-video" muted poster="images/auto/hero-bg-pricing-poster%402x-1cf93a22c2.jpg" preload="none">
-                        <source type="video/webm" src="videos/bg-pricing/1920x1080/2500k.webm" />
-                        <source type="video/mp4" src="videos/bg-pricing/1920x1080/4000k.mp4" />
+                    <video class="js-hero-video pp-hero-video" muted poster="images/auto/hero-bg-pricing-poster@2x-1cf93a22c2.jpg" preload="none">
+                        <source type="video/webm" src="videos/1920x1080/2500k.webm" />
+                        <source type="video/mp4" src="videos/1920x1080/4000k.mp4" />
                     </video>
                 </div>
             </section>
